yaml/demo6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  name: nginx-server-ingress

spec:
  ingressClassName: nginx
  rules:
  - host: app1.cluster.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 5000
